Added Create Product UI and logic

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -7,6 +7,7 @@
 <body>
 <div class="container">
     <h1 class="mt-5 mb-4">Product List</h1>
+    <a href="/product/create" class="btn btn-success">Create Product</a>
     <div class="row">
         <!-- Iterate through a list of products and display each product -->
         <div th:each="product : ${products}" class="col-md-4 mb-4">
