--- a/src/main/resources/templates/createProduct.html
+++ b/src/main/resources/templates/createProduct.html
@@ -32,22 +32,25 @@
             <label for="price">Price:</label>
             <input type="number" class="form-control" id="price" name="price" required>
         </div>
-        <!--<div class="form-group">
+        <div class="form-group">
             <label for="category">Category:</label>
-            <input type="text" class="form-control" id="category" name="category" required>
+            <select class="form-control" id="category" name="category">
+            <option th:each="category : ${categories}"
+                    th:value="${category.id}" th:text="${category.name}"> Select a category </option>
+            </select>
         </div>
-        <div class="form-group">
-            <label for="brand">Brand:</label>
-            <input type="text" class="form-control" id="brand" name="brand" required>
-        </div>
-        <div class="form-group">
-            <label for="availability">Availability:</label>
-            <input type="text" class="form-control" id="availability" name="availability" required>
-        </div>
-        <div class="form-group">
-            <label for="rating">Rating:</label>
-            <input type="number" class="form-control" id="rating" name="rating" required>
-        </div>-->
+        <!-- <div class="form-group">
+             <label for="brand">Brand:</label>
+             <input type="text" class="form-control" id="brand" name="brand" required>
+         </div>
+         <div class="form-group">
+             <label for="availability">Availability:</label>
+             <input type="text" class="form-control" id="availability" name="availability" required>
+         </div>
+         <div class="form-group">
+             <label for="rating">Rating:</label>
+             <input type="number" class="form-control" id="rating" name="rating" required>
+         </div>-->
         <button type="submit" class="btn btn-primary">Save</button>
     </form>
 </div>
