--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -18,6 +18,7 @@
 </head>
 <body>
 <div class="container">
+    <a href="/product/get" class="btn btn-success">Back To Product Page</a>
     <h1 class="mt-5 mb-4">Category List</h1>
     <a href="/category/create" class="btn btn-success">Create Category</a>
     <div class="row">
