--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -7,7 +7,14 @@
 <body>
 <div class="container">
     <h1 class="mt-5 mb-4">Product List</h1>
-    <a href="/product/create" class="btn btn-success">Create Product</a>
+    <div class="alert alert-success" th:if="${welcomeMessage}">
+        <p th:text="${welcomeMessage}"></p>
+    </div>
+    <div th:if="${#lists.isEmpty(products)}">
+        <p>No products available</p>
+        <a href="/category/create" class="btn btn-primary"> Add Category</a>
+    </div><br/>
+    <a href="/product/create" class="btn btn-success">Add Product</a>
     <div class="row">
         <!-- Iterate through a list of products and display each product -->
         <div th:each="product : ${products}" class="col-md-4 mb-4">
