--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -17,15 +17,15 @@
     <a href="/product/create" class="btn btn-success">Add Product</a>
     <div class="row">
         <!-- Iterate through a list of products and display each product -->
-        <div th:each="product : ${products}" class="col-md-4 mb-4">
+        <div th:each="product : ${products}" class="col-md-4 mb-4" th:width="250" th:height="800">
             <div class="card">
                 <a th:href="@{'/product/'+${product.id}}">
                     <img th:src="@{'/images/'+${product.id}+'.jpg'}" class="card-img-top" th:alt="${product.name}" th:width="200" th:height="200"></a>
                 <div class="card-body">
                     <h5 class="card-title" th:text="${product.name}">Product Title</h5>
                     <p class="card-text" th:text="${product.description}">Product Description.</p>
-                    <p class="card-text" th:text="'Price: $' + ${product.price}">Price</p>
-                    <p class="card-text" th:text="'Category: $' + ${product.category.name}">Category</p>
+                    <p class="card-text" th:text="'Price: ₹' + ${product.price}">Price</p>
+                    <p class="card-text" th:text="'Category: NammaMart' + ${product.category.name}">Category</p>
                     <a th:href="@{'/buy/' + ${product.id}}" class="btn btn-primary">Buy Now</a>
                     <a th:href="@{'/cart/add/' + ${product.id}}" class="btn btn-secondary">Add to Cart</a>
                 </div>
